# weaver

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  pyproject.toml
notes/: README.md
notes/inbox/: foundation.md  structured-context.md
ops/context/: chatgpt-project-glossary.yaml  project-glossary.yaml  projects.md
ops/manifests/: .gitkeep
ops/notes/: 2026-06-21-weaver-state-and-next-steps.md
ops/plans/: weaver-structure-and-retrieval.md  weaver-workflow-todo.md
ops/process/: project-promotion-checklist.md  wiki-synthesis-playbook.md  wiki-synthesis-task-template.md
ops/status/: dashboard.md  project-card-schema.md
ops/status/projects/: accretion.md  chronicle.md  conjuration.md  foundation.md  genesis.md  obelisk.md  p12n.md  revelation.md  weaver.md  whetstone.md
ops/synthesis/: p12n-quant-categorization.md  residual-unassigned-mining-plan.md  unassigned-ai-mining-plan.md  unassigned-cognitive-mining-plan.md  unassigned-drawing-mining-plan.md  unassigned-math-mining-plan.md  unassigned-mining-plan.md  unassigned-personal-mining-plan.md  unassigned-writing-mining-plan.md  wiki-hub-todo.md
ops/triage/: .gitkeep
src/weaver/: __init__.py  cli.py  inventory.py
tests/: test_chatgpt_apply.py  test_chatgpt_triage.py  test_inventory.py  test_notes_triage.py  test_obsidian_triage.py  test_triage_apply.py
wiki/: index.md
wiki/projects/: accretion.md  chronicle.md  conjuration.md  foundation.md  genesis.md  obelisk.md  p12n.md  revelation.md  weaver.md  whetstone.md
wiki/topics/: music.md  personal.md  poker.md  quant.md  reading-and-books.md
(+57 files in other folders)
